<resources>
    <string name="app_name" translatable="true">Popular Movies P2</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="refreshString" translatable="true">Refresh</string>
    <string name="title_activity_settings" translatable="true">Settings</string>
    <!-- Strings related to Settings -->

    <!-- api related parameters -->
    <string name="api_base_url" translatable="false">http://api.themoviedb.org/3/movie/</string>
    <string name="poster_base_url" translatable="false">http://image.tmdb.org/t/p</string>
    <string name="api_key" translatable="false">7e423f4d80381c3223567682f6e2881e</string>
    <string name="review_keyword" translatable="false">/review</string>
    <string name="paging" translatable="false">page</string>
    <string name="most_popular" translatable="false">/popular</string>
    <string name="top_rated" translatable="false">/top_rated</string>
    <string name="movie_trailer_by_id" translatable="false">/videos</string>
    <string name="movie_review_by_id" translatable="false">/reviews</string>

    <string-array name="parsingJsonParams" translatable="false">
        <item>results</item>
        <item>id</item>
        <item>title</item>
        <item>overview</item>
        <item>popularity</item>
        <item>vote_average</item>
        <item>release_date</item>
        <item>poster_path</item>
        <item>backdrop_path</item>
    </string-array>
    <string-array name="review_parsingJsonParams" translatable="false">
        <item>results</item>
        <item>id</item>
        <item>content</item>
        <item>author</item>
    </string-array>

    <string-array name="trailers_parsingJsonParams" translatable="false">
        <item>results</item>
        <item>id</item>
        <item>key</item>
        <item>name</item>
    </string-array>

    <string-array name="poster_res_titles" translatable="false">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="poster_res_entries_default">/w500</string>
    <string-array name="poster_res_entries" translatable="false">
        <item>/w342</item>
        <item>/w500</item>
        <item>/w780</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="true">General</string>
    <string name="pref_title_toprating" translatable="true">Top rating</string>
    <string name="pref_description_sortbytorating" translatable="true">Movies are to be sorted based on users rating
    </string>
    <string name="pref_title_popularityrating" translatable="true">Most popular</string>
    <string name="pref_description_popularityrating" translatable="true">Movies are to be sorted based on most watched
    </string>
    <string name="pref_title_display_name" translatable="true">Display name</string>
    <string name="pref_default_display_name" translatable="true">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="true">Add friends to messages</string>

    <string-array name="pref_sorting_titles">
        <item>Upcoming</item>
        <item>Top ranked</item>
        <item>Most popular</item>
        <item>Now playing</item>
    </string-array>
    <string name="pref_sorting_values_default">top_rated</string>
    <string-array name="pref_sorting_values">
        <item>upcoming</item>
        <item>top_rated</item>
        <item>popular</item>
        <item>now_playing</item>
    </string-array>

    <string name="pref_title_list_islong">Enable long movie list</string>
    <string name="pref_description_title_list_islong">(NOT IMPLEMENTED ) Turn this on if you like to view more
        than 20 movies in the list
    </string>
    <string name="pref_poster_res">Customize display</string>
    <string name="pref_poster_res_key">pref_poster_res_key</string>
    <string name="pref_sorting_title">Sort list by</string>
    <string name="pref_sorting_key">pref_sorting_key</string>
    <string name="pref_switch_islong_key">pref_switch_islong_key</string>
    <string name="title_activity_details">Movie details</string>
    <string name="pref_title_favorite">Only favorite movies</string>
    <string name="pref_description_title_list_favorite">Select to show the list of favorite movies</string>
    <string name="pref_checked_favorite_key">pref_checked_favorite_key</string>
    <string name="add_fav">Add fav</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="review_hint_label">Not available yet</string>
    <string name="trailer_description">Click here to play a trailer</string>
    <string name="desc_icon">supporting icon, user face</string>
    <string name="descp_posterimage">Movie poster image</string>
    <string name="descp_backposter">Backposter image of a movie</string>
    <string name="descp_fav_icon">icon to display favorite</string>
    <string name="no_fav_dialog_title">No Favorite Movies</string>
    <string name="no_fav_dialog_msg">You must mark at least one movie as a favorite to enable
                                your favorite movies only. \nIf more than one item are marked as favorites,
        then can sort your favorite list by selecting a second sorting criteria from settings</string>
    <string name="layout_col">1</string>
    <string name="list_movies_empty">Not available \\n Check your internet connection \\n Check the setting of this app.</string>
    <string name="sync_account_type">popularmovies.m_alrajab.example.com</string>
    <string name="content_authority">com.example.m_alrajab.popularmovies</string>
</resources>
